Bug 1792676 [Wayland] Set modifiers according to key press/release r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D184228